# esp-vision

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_ZH.md  build-hiwonder.yml  build_custom.sh  build_esp32s3_eye.sh  build_hiwonder.sh  build_hiwonder_aimodule.sh  idf_ext.py  micropython.cmake  trigger-boardconfig-rewrite.txt  trigger-btree-fix.txt  trigger-btree-off.txt  trigger-idf.txt  trigger-jpeg-fix.txt  trigger-manifest-fix.txt  trigger-minimal.txt  trigger-mp-bt-off.txt  trigger-no-bt.txt  trigger-no-btree.txt  trigger-path.txt  trigger-proper-patch.txt  trigger-safe-dir.txt  trigger-test.txt  trigger-upload.txt  trigger-v60-bdb-fix.txt  trigger.txt
.github/workflows/: build-hiwonder-aimodule.yml  build-hiwonder-s3.yml  build-hiwonder.yml  build.yml  ci.yml  custom-build.yml  esp32-s3-build.yml  esp32s3-eye-build.yml  minimal-build.yml  test-artifact.yml  test-cache.yml  test-container.yml  test-dispatch.yml  test-full-build.yml  test-hashfiles.yml  test-heredoc.yml  test-idf-image.yml  test-idf.yml  test-if.yml  test-jobname.yml  test-minimal-docker.yml  test-minimal.yml  test-multiline.yml  test-submodules.yml  test-upload-if.yml  test.yml
.gitlab/ci/: deploy.yml  docs.yml  rules.yml  utils.sh
boards/: HIWONDER_AI_MODULE
boards/AtomS3R-M12/: board_inisetup.py  boardconfig.h  camera.c  display.c  manifest.py
boards/AtomS3R-M12/port/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  partitions-8MiB-esp-vision.csv  sdkconfig.atoms3r_m12  sdkconfig.board
boards/ESP32_P4X_EYE/: board.cmake  board_inisetup.py  boardconfig.h  camera.c  display.c  imlib_config.h  manifest.py
boards/ESP32_P4X_FUNCTION_EV_BOARD/: board_inisetup.py  boardconfig.h  camera.c  imlib_config.h  manifest.py
boards/ESP32_P4X_VISION/: board_inisetup.py  boardconfig.h  camera.c  manifest.py  sdcard.c
boards/ESP32_P4X_VISION/port/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB-esp-vision.csv  sdkconfig.board  sdkconfig.p4x_vision
boards/ESP32_S31_KORVO/: board.cmake  board_inisetup.py  boardconfig.h  camera.c  display.c  manifest.py  sdcard.c
boards/ESP32_S31_KORVO/port/: board.json  mpconfigboard.h  partitions-16MiB-esp-vision.csv  sdkconfig.board  sdkconfig.s31_korvo
boards/ESP32_S3_CUSTOM/: board.cmake  board_inisetup.py  boardconfig.h  camera.c  display.c  imlib_config.h  manifest.py  sdcard.c  sdkconfig.s3_custom
boards/ESP32_S3_CUSTOM/port/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB-esp-vision.csv  sdkconfig.board
boards/ESP32_S3_EYE/: board_inisetup.py  boardconfig.h  camera.c  display.c  manifest.py
boards/ESP32_S3_EYE/port/: mpconfigboard.h  partitions-16MiB-esp-vision.csv  sdkconfig.board  sdkconfig.s3_eye
boards/HIWONDER_AI_MODULE/: audio.c  board_inisetup.py  boardconfig.h  camera.c  display.c  manifest.py  minimp3_impl.c  partitions-16MiB-esp-vision.csv  partitions-8MiB-esp-vision.csv  sdcard.c  sdkconfig.board  touch.c
boards/HIWONDER_AI_MODULE/port/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  partitions-16MiB-esp-vision.csv  sdkconfig.board  sdkconfig.hiwonder
boards/HIWONDER_S3/: board_inisetup.py  boardconfig.h  manifest.py  partitions-16MiB-esp-vision.csv  patch_bdb.py  sdkconfig.board  sdkconfig.hiwonder_s3
boards/HIWONDER_S3/port/: mpconfigboard.cmake  mpconfigboard.h  sdkconfig.hiwonder_s3
boards/TEMPLATE/: boardconfig.h  camera.c  imlib_config.h  sdcard.c
components/imlib/: CMakeLists.txt  idf_component.yml
components/imlib/compat/: fb_alloc.c  lab_table.c  sincos_table.c  umm_malloc.c
components/imlib/include/: arm_math.h  cmsis_compiler.h  cmsis_extension.h  fb_alloc.h  file_utils.h  omv_boardconfig.h  omv_gpu.h  omv_profiler.h  umm_malloc.h
components/imlib/upstream/: apriltag.c  collections.h  imlib.c  imlib.h  jpegd.c  mathop.c
components/zxing/: CMakeLists.txt  esp_vision_zxing.cpp  idf_component.yml
components/zxing/cmake/: FindThreads.cmake
components/zxing/compat/: ODReader.cpp  zxing_config_override.h
components/zxing/include/: esp_vision_zxing.h  esp_vision_zxing_imlib_types.h
docs/: README.md  board_model.py  conf_common.py  gen_api.py  gen_board_support.py  gen_mcp.py  requirements.txt  targets.py
docs/_static/: versions.js
docs/en/: conf.py  index.rst
docs/en/api-reference/: display.rst  espdl.rst  h264.rst  image.rst  imageio.rst  index.rst  micropython.rst  rtsp.rst  sensor.rst  tflite.rst
docs/en/architecture/: index.rst
docs/en/concepts/: ai-inference.rst  boot-sequence.rst  camera-pipeline.rst  codec-streaming.rst  image-model.rst  image-processing.rst  index.rst  micropython-language.rst  packages.rst
docs/en/examples/: index.rst
docs/en/get-started/: index.rst
docs/en/how-to/: add-board.rst  add-model.rst  add-python-module.rst  customize-firmware.rst  index.rst  (+1 more)
docs/zh_CN/: conf.py  index.rst
example/05-Feature-Detection/: find_apriltags.py  find_barcodes.py
models/: README.md
models/espdet/: README.md
modules/: py_audio.c  py_display.c  py_espdl.cpp  py_h264.c  py_helper.c  py_helper.h  py_image.c  py_image.h  py_imageio.c  py_inisetup.py  py_rtsp.c  py_sensor.c  py_tflite.cpp  qstrdefs_esp_vision.h
platform/: audio.h  camera.c  camera.h  debug.c  debug.h  display.c  display.h  h264.c  h264.h  jpeg.c  jpeg.h  main.c  preview.c  preview.h  sdcard.c
stubs/: README.md  display.pyi  espdl.pyi  h264.pyi  image.pyi  imageio.pyi  rtsp.pyi  sensor.pyi  tflite.pyi
tools/ci/: astyle-rules.yml  check_copyright_config.yaml  check_docs_deployment.py  check_docs_format.py  check_docs_impact.py  check_docs_lang_sync.py  check_readme_links.py  post_docs_preview.py  prepare_docs_landing.py  push_to_github.sh
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: preview.css  preview.html  preview.js
vscode-extension/src/: commands.ts  extension.ts  previewParser.ts  rawRepl.ts  serialTransport.ts  session.ts
workflows/: custom-build.yml
(+100 files in other folders)
